# aoc

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
2022/: README.md  justfile
2022/day-01/: Cargo.toml
2022/day-01/src/: lib.rs
2022/day-02/: Cargo.toml
2022/day-02/src/: lib.rs
2022/day-03/: Cargo.toml
2022/day-03/src/: lib.rs
2022/day-04/: Cargo.toml
2022/day-04/src/: lib.rs
2022/day-05/: Cargo.toml
2022/day-05/src/: lib.rs
2022/day-06/: Cargo.toml
2022/day-06/src/: lib.rs
2023/: README.md  justfile
2023/day-01/: Cargo.toml
2023/day-01/src/: lib.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: lib.rs
2023/day-03/: Cargo.toml
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-05/src/: lib.rs
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-08/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-13/: Cargo.toml
2023/day-14/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-18/: Cargo.toml
2023/day-19/: Cargo.toml  input2.txt
2023/day-20/: Cargo.toml
2023/day-21/: Cargo.toml
2023/day-22/: Cargo.toml
2023/day-23/: Cargo.toml
2023/day-24/: Cargo.toml
2023/day-25/: Cargo.toml
2023/day-25/src/: lib.rs
common/src/: math.rs
daily-template/: Cargo.toml
daily-template/src/: lib.rs
day-01/: Cargo.toml
day-01/src/: lib.rs
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/src/: lib.rs
day-04/: Cargo.toml
day-04/src/: lib.rs
day-05/: Cargo.toml
day-06/: Cargo.toml
day-07/: Cargo.toml
day-07/src/: lib.rs
day-08/: Cargo.toml
day-09/: Cargo.toml
day-09/src/: lib.rs
day-10/: Cargo.toml
day-11/: Cargo.toml
day-11/src/: lib.rs
day-12/: Cargo.toml
day-12/src/: lib.rs
day-13/: Cargo.toml
day-13/src/: lib.rs
day-14/: Cargo.toml
day-14/src/: lib.rs
day-15/: Cargo.toml
day-16/: Cargo.toml
day-16/src/: lib.rs
day-17/: Cargo.toml
day-17/src/: lib.rs
day-18/: Cargo.toml
day-18/src/: lib.rs
day-19/: Cargo.toml
day-20/: Cargo.toml
day-20/src/: lib.rs
day-21/: Cargo.toml
day-21/src/: lib.rs
day-22/: Cargo.toml
day-23/: Cargo.toml
day-23/src/: lib.rs
day-24/: Cargo.toml
day-25/: Cargo.toml
(+7 files in other folders)
