[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
ndarray = "0.15.6"
anyhow = "1.0.75"
queues = "1.1.0"
