[package]
name = "day-18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
polygonical = "0.5.0"
