[package]
name = "aoc2022-day-06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }