[package]
name = "aoc2023-day-17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
anyhow = "1.0.75"
ndarray = "0.15.6"
petgraph = "0.6.4"
