[package]
name = "aoc2023-day-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
petgraph = "0.6.4"
anyhow = "1.0.76"
ndarray = "0.15.6"
linked_hash_set = "0.1.4"
