[package]
name = "aoc2023-day-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
petgraph = "0.6.4"
ndarray = "0.15.6"
anyhow = "1.0.76"
